objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Admin_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BackPromote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BackPromote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BitCoin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BitCoin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_test_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI test 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_test_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI test 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_test_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI test 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CO1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CO2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_EEE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case EEE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_JJJ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case JJJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_OOO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case OOO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_TTT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case TTT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_prod_field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case prod field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Bevtrack</fullName>
                </value>
                <value>
                    <fullName>CCE document</fullName>
                </value>
                <value>
                    <fullName>FR - Consumer/Others</fullName>
                </value>
                <value>
                    <fullName>Contract Changes</fullName>
                </value>
                <value>
                    <fullName>FR - Customer PAV</fullName>
                </value>
                <value>
                    <fullName>FR - Customer Powerade Service</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivery Recovery Requests</fullName>
                </value>
                <value>
                    <fullName>EDI Customer</fullName>
                </value>
                <value>
                    <fullName>Employee Relations</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>External (NSC)</fullName>
                </value>
                <value>
                    <fullName>External (SC)</fullName>
                </value>
                <value>
                    <fullName>External Customer</fullName>
                </value>
                <value>
                    <fullName>Files Management</fullName>
                </value>
                <value>
                    <fullName>Flexible Working Application</fullName>
                </value>
                <value>
                    <fullName>Free Products</fullName>
                </value>
                <value>
                    <fullName>Full Service Vending</fullName>
                </value>
                <value>
                    <fullName>HR Information Systems</fullName>
                </value>
                <value>
                    <fullName>Internal (NSC)</fullName>
                </value>
                <value>
                    <fullName>Internal (SC)</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Learning and Development</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Master Data</fullName>
                </value>
                <value>
                    <fullName>Merchandiser</fullName>
                </value>
                <value>
                    <fullName>Misdirects</fullName>
                </value>
                <value>
                    <fullName>New Hire (External Recruitment)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Controlling__c</fullName>
        <label>Controlling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Controlling 1</fullName>
                </value>
                <value>
                    <fullName>Controlling 2</fullName>
                </value>
                <value>
                    <fullName>Controlling 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <label>Dependent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Controlling__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Dependent 1</fullName>
                </value>
                <value>
                    <fullName>Dependent 2</fullName>
                </value>
                <value>
                    <fullName>Dependent 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destructive_Test_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Destructive Test 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destructive_Test_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Destructive Test 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destructive_Test_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Destructive Test 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_move_to_UATcase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not move to UAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotfix_Test__c</fullName>
        <label>Hotfix Test</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeepMe2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KeepMe2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeepMe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KeepMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Login_IP_restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Login IP restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <description>Added: Maybe</description>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Category__c</fullName>
        <label>Primary Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Beach</fullName>
                </value>
                <value>
                    <fullName>River</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>3PI</fullName>
                </value>
                <value>
                    <fullName>Accessibility</fullName>
                </value>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Account Set-up</fullName>
                </value>
                <value>
                    <fullName>Add Access</fullName>
                </value>
                <value>
                    <fullName>Add Contact</fullName>
                </value>
                <value>
                    <fullName>Admin Tools Issue</fullName>
                </value>
                <value>
                    <fullName>Alert</fullName>
                </value>
                <value>
                    <fullName>Amentities Incorrect</fullName>
                </value>
                <value>
                    <fullName>AR Updates</fullName>
                </value>
                <value>
                    <fullName>Atlantis</fullName>
                </value>
                <value>
                    <fullName>Auto Renewals</fullName>
                </value>
                <value>
                    <fullName>Availability Incorrect</fullName>
                </value>
                <value>
                    <fullName>Balcony</fullName>
                </value>
                <value>
                    <fullName>Beach Safety</fullName>
                </value>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Business Model Change</fullName>
                </value>
                <value>
                    <fullName>Cancellation Policy</fullName>
                </value>
                <value>
                    <fullName>Case Escalation Request</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Compensation Change</fullName>
                </value>
                <value>
                    <fullName>Confirmation</fullName>
                </value>
                <value>
                    <fullName>Connectivity Partner Outage</fullName>
                </value>
                <value>
                    <fullName>Connectivity Solution Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Category_1__c</fullName>
        <label>Sub Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>360 Degree Feedback Survey</fullName>
                </value>
                <value>
                    <fullName>Absence Management</fullName>
                </value>
                <value>
                    <fullName>Absences</fullName>
                </value>
                <value>
                    <fullName>Absences (Kronos)</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Account Change</fullName>
                </value>
                <value>
                    <fullName>Account Information Change</fullName>
                </value>
                <value>
                    <fullName>Account is a MOG</fullName>
                </value>
                <value>
                    <fullName>Account is a National Account</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Accruals/Quotas</fullName>
                </value>
                <value>
                    <fullName>Accruals/quotas (Kronos)</fullName>
                </value>
                <value>
                    <fullName>Admin change</fullName>
                </value>
                <value>
                    <fullName>Admin change without AR</fullName>
                </value>
                <value>
                    <fullName>Administrative Placement</fullName>
                </value>
                <value>
                    <fullName>ADP Payroll G2</fullName>
                </value>
                <value>
                    <fullName>Advance Payment</fullName>
                </value>
                <value>
                    <fullName>Aged Debt</fullName>
                </value>
                <value>
                    <fullName>Airport Calls</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Altercation</fullName>
                </value>
                <value>
                    <fullName>Amend Org Unit</fullName>
                </value>
                <value>
                    <fullName>Amend Position</fullName>
                </value>
                <value>
                    <fullName>Any Question of Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Appeals</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AR - Change</fullName>
                </value>
                <value>
                    <fullName>AR- Creation</fullName>
                </value>
                <value>
                    <fullName>AR - New</fullName>
                </value>
                <value>
                    <fullName>AR- Suppression</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Diageo__c</fullName>
        <label>Test Diageo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                    <isActive>false</isActive>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <isActive>false</isActive>
                    <label>5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_env_variables__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Replace this {!Environment.TEST-ENV} with the corresponding value.</description>
        <label>Test env variables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bug_test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>bug test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>convert__c</fullName>
        <label>convert</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>depth_deplo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>depth deplo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>depth_test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>depth test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>refactor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a description.</description>
        <label>refactor</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Test_LV</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Test LV</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Record_Type</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <label>Record Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>